feat: add server update's API
