# server_administration_service/internal/handler/server_handler.go
@@ -10,6 +10,7 @@ import (
 
 type ServerHandler interface {
 	CreateServer(w http.ResponseWriter, r *http.Request)
+	UpdateServer(w http.ResponseWriter, r *http.Request)
 	DeleteServer(w http.ResponseWriter, r *http.Request)
 }
 
@@ -54,6 +55,55 @@ func (h *serverHandler) CreateServer(w http.ResponseWriter, r *http.Request) {
 	logging.LogMessage("server_administration_service", "Server created successfully with ID: "+serverID, "INFO")
 	w.WriteHeader(http.StatusCreated)
 	w.Write([]byte("Server created successfully"))
+}
+
+func (h *serverHandler) UpdateServer(w http.ResponseWriter, r *http.Request) {
+	serverID := r.URL.Query().Get("server_id")
+	if serverID == "" {
+		logging.LogMessage("server_administration_service", "Server ID is required for update", "ERROR")
+		http.Error(w, "Server ID is required", http.StatusBadRequest)
+		return
+	}
+
+	var requestBody map[string]interface{}
+	err := json.NewDecoder(r.Body).Decode(&requestBody)
+	if err != nil {
+		logging.LogMessage("server_administration_service", "Failed to decode request body for request UpdateServer: "+err.Error(), "ERROR")
+		http.Error(w, "Invalid request body", http.StatusBadRequest)
+		return
+	}
+
+	updatedData := make(map[string]interface{})
+	serverName, existed := requestBody["server_name"].(string)
+	if existed {
+		updatedData["server_name"] = serverName
+	}
+
+	status, existed := requestBody["status"].(string)
+	if existed {
+		updatedData["status"] = status
+	}
+
+	ipAddress, existed := requestBody["ipv4"].(string)
+	if existed {
+		updatedData["ipv4"] = ipAddress
+	}
+
+	portFloat, existed := requestBody["port"].(float64)
+	if existed {
+		updatedData["port"] = int(portFloat)
+	}
+
+	err = h.service.UpdateServer(serverID, updatedData)
+	if err != nil {
+		logging.LogMessage("server_administration_service", "Failed to update server: "+err.Error(), "ERROR")
+		http.Error(w, "Failed to update server", http.StatusInternalServerError)
+		return
+	}
+
+	logging.LogMessage("server_administration_service", "Server updated successfully with ID: "+serverID, "INFO")
+	w.WriteHeader(http.StatusOK)
+	w.Write([]byte("Server updated successfully"))
 }
 
 func (h *serverHandler) DeleteServer(w http.ResponseWriter, r *http.Request) {
