# server_administration_service/internal/service/server_service.go
@@ -8,6 +8,7 @@ import (
 
 type ServerService interface {
 	CreateServer(server_id, server_name, status, ipv4 string, port int) error
+	UpdateServer(server_id string, updatedData map[string]interface{}) error
 	DeleteServer(server_id string) error
 	
 	UpdateServerStatus(server_id, status string) error
@@ -38,6 +39,11 @@ func (s *serverService) CreateServer(server_id, server_name, status, ipv4 string
 		return err
 	}
 	return nil
+}
+
+func (s *serverService) UpdateServer(server_id string, updatedData map[string]interface{}) error {
+	err := s.serverRepository.UpdateServer(server_id, updatedData)
+	return err
 }
 
 func (s *serverService) DeleteServer(server_id string) error {
